--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -293,6 +293,16 @@
             <a class="button is-primary" href="https://www.magnolia-cms.com/getstarted" target="_blank">Get Magnolia</a>
           </span>
         </div>
+        <!-- dark mode switch -->
+        <div class="theme-switch-wrapper">
+            <span id="toggle-icon">
+                <i class="fas fa-sun"></i>
+            </span>
+            <label class="theme-switch">
+                <input type="checkbox">
+                <div class="slider round"></div>
+            </label>
+        </div>
       </div>
     </div>
   </nav>
