increase spacing below titles in admons

--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -626,6 +626,10 @@
   text-align: left;
 }
 
+.doc .admonitionblock .title {
+    padding-bottom: 1.075rem;
+}
+
 .doc .imageblock .title {
   margin-top: 0.5rem;
   padding-bottom: 0;
