--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -1164,3 +1164,36 @@
   font-size: smaller;
   font-style: italic;
 }
+
+.doc .gold-badge {
+  background: var(--color-primary-gold);
+  border-radius: 0.5rem;
+  color: #fff;
+  display: inline-block;
+  font-size: 0.8rem;
+  font-weight: 400;
+  line-height: 1.5;
+  padding: 0 0.5rem;
+}
+
+.doc .green-badge {
+  background: var(--color-primary-green);
+  border-radius: 0.5rem;
+  color: #fff;
+  display: inline-block;
+  font-size: 0.8rem;
+  font-weight: 400;
+  line-height: 1.5;
+  padding: 0 0.5rem;
+}
+
+.doc .grey-badge {
+  background: #656565;
+  border-radius: 0.5rem;
+  color: #fff;
+  display: inline-block;
+  font-size: 0.8rem;
+  font-weight: 400;
+  line-height: 1.5;
+  padding: 0 0.5rem;
+}
