--- a/src/partials/footer-content.hbs
+++ b/src/partials/footer-content.hbs
@@ -3,24 +3,31 @@
     <li><a href="https://www.magnolia-cms.com/get-started/developer-trial.html" target="_blank" rel="noopener">Developer Trial</a></li>
     <li><a href="https://wiki.magnolia-cms.com/" target="_blank" rel="noopener">Community Wiki</a></li>
     <li><a href="https://docs.magnolia-cms.com/incubator-modules/index.html">Incubator Modules</a></li>
-    <li><a href="https://marketplace.magnolia-cms.com/">Magnolia Marketplace</a></li>
+    <li><a href="https://marketplace.magnolia-cms.com/" target="_blank">Magnolia Marketplace</a></li>
+    <li><a href="http://mgnl.io/roadmap" target="_blank" >Product Roadmap</a></li>
+    <li><a href="https://github.com/magnolia-cms" target="_blank" >GitHub <i class="fa fa-github" aria-hidden="true"></i></a></li>
   </ul>
 </div>
 <div class="col">
   <ul>
-    <li><a href="https://www.magnolia-cms.com/support.html" target="_blank" rel="noopener">Support</a></li>
-    <li><a href="https://magnolia-cms.com/blog" target="_blank" rel="noopener">Blog</a></li>
+    
+    <li><a href="https://www.magnolia-cms.com/services.html" target="_blank" rel="noopener">Professional Services</a></li>
+    <li><a href="https://www.magnolia-cms.com/services/education/academy.html" target="_blank" rel="noopener">Magnolia Academy</a></li>
     <li><a href="https://www.magnolia-cms.com/services/education/training.html" target="_blank" >Training</a></li>
     <li><a href="https://www.magnolia-cms.com/services/education/certification.html" target="_blank" >Certification</a></li>
+    <li><a href="https://www.magnolia-cms.com/partners.html" target="_blank" >Partner Program</a></li>
+    <li><a href="https://www.magnolia-cms.com/support.html" target="_blank" rel="noopener">Support</a></li>
   </ul>
 </div>
 <div class="col">
   <ul>
     <li><a href="https://www.magnolia-cms.com/library.html" target="_blank" >Magnolia Resources</a></li>
+    <li><a href="https://www.magnolia-cms.com/blog.html" target="_blank" >Magnolia Blog</a></li>
+    <li><a href="https://www.magnolia-cms.com/library/videos.html" target="_blank" >Magnolia Videos</a></li>
     <li><a href="https://www.magnolia-cms.com/product/architecture-and-tech-stack.html" target="_blank" >Architecture and Tech Stack</a></li>
     <li><a href="https://www.magnolia-cms.com/email/newsletter.html" target="_blank" >Newsletter</a></li>
-    <li><a href="http://mgnl.io/roadmap" target="_blank" >Product Roadmap</a></li>
-
+    <li><a href="https://www.magnolia-cms.com/about/careers.html" target="_blank" >Careers - Join us!</a></li>
+  
   </ul>
 </div>
 
