disable search for 63 preview site

--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -268,7 +268,7 @@
       </button>
     </div>
     <div id="topbar-nav" class="navbar-menu">
-      {{> search}}
+      {{> search-disabled}}
       <div class="navbar-end">
         <a href="{{{siteRootPath}}}/product-docs/Releases.html" class="navbar-item">Releases</a>
         <div class="navbar-item has-dropdown is-hoverable">
