--- a/src/layouts/404.hbs
+++ b/src/layouts/404.hbs
@@ -33,7 +33,7 @@
   </svg>
 <div class="message-box">
   <div>
-    <h1>4<span style="color: var(--color-green-reflex);">0</span>4</h1>
+    <h1>4<span style="color: var(--color-primary-green);">0</span>4</h1>
     <h2>Uh oh. We seem to have lost the page you were looking for.</h2>
     <p class="four">Here are a few tips:</p>
     <ul>
