--- a/src/partials/footer-scripts-saas.hbs
+++ b/src/partials/footer-scripts-saas.hbs
@@ -37,18 +37,12 @@
 
 </script>
 
-<script src="//www.eucookie.eu/public/gdpr-cookie-consent.js" type="text/javascript"></script>
+{{!-- <script src="//www.eucookie.eu/public/gdpr-cookie-consent.js" type="text/javascript"></script>
 <script type="text/javascript">
 	var cookieConsent = new cookieConsent({
 	clientId: '22aadf89-d87b-4277-83ac-f12dfee5eb1f'
 });
 cookieConsent.run();
-</script>
+</script> --}}
 
-<script src="//www.eucookie.eu/public/gdpr-cookie-consent.js" type="text/javascript"></script>
-<script type="text/javascript">
-	var cookieConsent = new cookieConsent({
-	clientId: '22aadf89-d87b-4277-83ac-f12dfee5eb1f'
-});
-cookieConsent.run();
-</script>
+
