differentiate pass saas headless via a new shadow color param in the navbar

--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -124,7 +124,7 @@
   </nav>
   {{/if}}
   {{#if (eq page.layout 'saas')}}
-  <nav class="navbar" id="topbar">
+  <nav class="navbar saas-nav" id="topbar">
     <div class="navbar-brand">
       <a class="navbar-item" href="{{{siteRootPath}}}/index.html">
       
@@ -182,7 +182,7 @@
   </nav>
 {{/if}}
   {{#if (eq page.layout 'paas')}}
-  <nav class="navbar" id="topbar">
+  <nav class="navbar paas-nav" id="topbar">
     <div class="navbar-brand">
       <a class="navbar-item" href="{{{siteRootPath}}}/index.html">
       
