--- a/src/css/header.css
+++ b/src/css/header.css
@@ -24,9 +24,18 @@ body {
   transition: 0.4s ease;
 }
 
+.navbar.saas-nav {
+  box-shadow: 0 4px 8px #599900;
+}
+
+.navbar.paas-nav {
+  box-shadow: 0 4px 8px #FFC226;
+}
+
 .navbar.headless-nav {
   background: var(--navbar-background);
   color: var(--navbar-font-color);
+  box-shadow: 0 4px 8px #000;
 }
 
 .navbar.headless-nav .navbar-item {
