--- a/src/layouts/api.hbs
+++ b/src/layouts/api.hbs
@@ -81,5 +81,6 @@
       }, document.getElementById('redoc-container'))
     </script> --}}
     {{> footer}}
+    {{> scroll-to-top}}
   </body>
 </html>
