--- a/src/css/header.css
+++ b/src/css/header.css
@@ -29,7 +29,7 @@ body {
 }
 
 .navbar.paas-nav {
-  box-shadow: 0 -13px 33px #FFC226;
+  box-shadow: 0 -13px 33px #ffc226;
 }
 
 .navbar.headless-nav {
