--- a/src/layouts/paas.hbs
+++ b/src/layouts/paas.hbs
@@ -6,7 +6,7 @@
   <body class="article{{#with (or page.attributes.role page.role)}} {{{this}}}{{/with}}">
 {{> header}}
 {{> body}}
-{{> footer-paas}}
+{{> footer}}
 {{> feedback}}
 {{> scroll-to-top}}
 {{> location}}
