--- a/src/partials/footer-scripts.hbs
+++ b/src/partials/footer-scripts.hbs
@@ -47,7 +47,7 @@
         indexName: 'dev_DOCS',
         inputSelector: '#searchBar',
         algoliaOptions: { hitsPerPage: 12 },
-        // debug: true // prevent it from closing on inspection.
+        debug: true // prevent it from closing on inspection.
     });
 
     function toggleDropDown () {
