--- a/src/css/search.css
+++ b/src/css/search.css
@@ -51,13 +51,13 @@
   margin-left: 0.15rem;
   color: var(--color-gray-30);
   opacity: 0.5;
-  border: 2px solid rgba(47, 79, 79, 0.438); 
-  box-shadow: 2px 2px rgba(47, 79, 79, 0.438); 
-  font-size: .85em; 
-  line-height: .85em; 
+  border: 2px solid rgba(47, 79, 79, 0.438);
+  box-shadow: 2px 2px rgba(47, 79, 79, 0.438);
+  font-size: 0.85em;
+  line-height: 0.85em;
   display: inline-block;
   font-weight: 600;
-  letter-spacing: .05em; 
+  letter-spacing: 0.05em;
   padding: 3px 5px;
   white-space: nowrap;
   font-family: var(--body-font-family);
@@ -103,4 +103,3 @@
     background: var(--color-gray-10);
   }
 }
-
