--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -11,7 +11,7 @@
   --color-primary-light-grey: #f6f6f6;
   --color-primary-yellow: #ffc226;
   --color-primary-blue: #4aace9;
-  --color-primary-ocean-blue: #00aeef;
+  --color-primary-ocean-blue: #00adef;
   --color-trials: #080a37;
   --color-red: #ff562a;
   --color-white: #fff;
