--- a/src/css/feedback.css
+++ b/src/css/feedback.css
@@ -15,7 +15,7 @@
   padding-top: 5px;
   padding-left: 0.9rem;
   display: block;
-  background: var(--color-primary-blue);
+  background: var(--color-primary-ocean-blue);
   /* border-radius: 50%; */
   /* border-radius: 8px; */
   font-family: inherit;
