--- a/src/partials/feedback.hbs
+++ b/src/partials/feedback.hbs
@@ -1,5 +1,32 @@
-<div id="feedback">
-    <a href="https://jira.magnolia-cms.com/secure/CreateIssueDetails!init.jspa?pid=10190&issuetype=4" target="_blank" rel="noopener">
-       Feedback
-    </a>
-</div>
+{{#if (eq page.layout 'default')}}
+    <div id="feedback">
+        <a href="https://jira.magnolia-cms.com/secure/CreateIssueDetails!init.jspa?pid=10190&issuetype=4" target="_blank" rel="noopener">
+        Feedback
+        </a>
+    </div>
+{{/if}}
+ 
+{{#if (eq page.layout 'saas')}}
+    <div id="feedback-saas">
+        <a href="https://jira.magnolia-cms.com/secure/CreateIssueDetails!init.jspa?pid=10190&issuetype=4" target="_blank" rel="noopener">
+        Feedback
+        </a>
+    </div>
+{{/if}}
+ 
+{{#if (eq page.layout 'paas')}}
+    <div id="feedback-paas">
+        <a href="https://jira.magnolia-cms.com/secure/CreateIssueDetails!init.jspa?pid=10190&issuetype=4" target="_blank" rel="noopener">
+        Feedback
+        </a>
+    </div>
+{{/if}}
+ 
+{{#if (eq page.layout 'headless')}}
+    <div id="feedback-headless">
+        <a href="https://jira.magnolia-cms.com/secure/CreateIssueDetails!init.jspa?pid=10190&issuetype=4" target="_blank" rel="noopener">
+        Feedback
+        </a>
+    </div>
+{{/if}}
+ 
