--- a/src/partials/location.hbs
+++ b/src/partials/location.hbs
@@ -1,6 +1,6 @@
 {{#if (eq page.layout 'default')}}
 <div id="location">
-        <p>DX Core <i class="fa fa-map-marker" aria-hidden="true"></i></p>
+        <p><i class="fa fa-map-marker" aria-hidden="true"></i> DX Core</p>
 </div>
 {{/if}}
 
