--- a/src/partials/location.hbs
+++ b/src/partials/location.hbs
@@ -18,7 +18,7 @@
 
 {{#if (eq page.layout 'saas')}}
 <div id="location-saas">
-        <p>SaaS <i class="fa fa-map-marker" aria-hidden="true"></i></p>
+        <p><i class="fa fa-map-marker" aria-hidden="true"></i> Saas</p>
 </div>
 {{/if}}
 
