paas feedback and location alignment

--- a/src/partials/location.hbs
+++ b/src/partials/location.hbs
@@ -24,6 +24,6 @@
 
 {{#if (eq page.layout 'paas')}}
 <div id="location-paas">
-        <p>PaaS <i class="fa fa-map-marker" aria-hidden="true"></i></p>
+        <p><i class="fa fa-map-marker" aria-hidden="true"></i> PaaS</p>
 </div>
 {{/if}}
