headless alignment location and feedback

--- a/src/partials/location.hbs
+++ b/src/partials/location.hbs
@@ -6,7 +6,7 @@
 
 {{#if (eq page.layout 'headless')}}
 <div id="location-headless">
-        <p>Headless <i class="fa fa-map-marker" aria-hidden="true"></i></p>
+        <p><i class="fa fa-map-marker" aria-hidden="true"></i> Headless</p>
 </div>
 {{/if}}
 
