--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -12,8 +12,9 @@
   --color-primary-yellow: #ffc226;
   --color-primary-blue: #4aace9;
   --color-primary-ocean-blue: #00adef;
-  --color-trials: #080a37;
+  --color-orange: #f48a16;
   --color-red: #ff562a;
+  --color-trials: #080a37;
   --color-white: #fff;
   --color-smoke-10: #fefefe;
   --color-smoke-30: #fafafa;
