--- a/src/css/feedback.css
+++ b/src/css/feedback.css
@@ -143,7 +143,7 @@
   padding-top: 5px;
   padding-left: 0.9rem;
   display: block;
-  background: var(--color-red);
+  background: var(--color-orange);
   /* border-radius: 50%; */
   /* border-radius: 8px; */
   font-family: inherit;
