--- a/src/partials/search.hbs
+++ b/src/partials/search.hbs
@@ -8,8 +8,8 @@
      {{!-- <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path fill-rule="evenodd" clip-rule="evenodd" d="M11.5674 3.36217C13.8338 5.63019 13.8338 9.30738 11.5674 11.5754C9.30093 13.8434 5.62629 13.8434 3.35984 11.5754C1.09339 9.30738 1.09339 5.63019 3.35984 3.36217C5.62629 1.09415 9.30093 1.09415 11.5674 3.36217ZM13.4909 11.8755C15.6297 8.95372 15.3798 4.82804 12.7412 2.18756C9.82645 -0.729186 5.10076 -0.729186 2.18604 2.18756C-0.72868 5.1043 -0.72868 9.83327 2.18604 12.75C4.8246 15.3904 8.94724 15.6406 11.867 13.5005L14.3648 16L15.9887 14.375L13.4909 11.8755Z" fill="#A8A8A8"/>
      </svg> --}}
-        <p id="keyboardShortcut"><i class="fa fa-search" aria-hidden="true"></i> <kbd>alt</kbd><kbd>k</kbd></p>
-        <p id="keyboardShortcutMac"><i class="fa fa-search" aria-hidden="true"></i> <kbd>ctrl</kbd> <kbd>opt</kbd> <kbd>k</kbd></p>
+        <p id="keyboardShortcut"><i class="fa fa-search" aria-hidden="true"></i> <kbd>alt</kbd><kbd>s</kbd></p>
+        <p id="keyboardShortcutMac"><i class="fa fa-search" aria-hidden="true"></i> <kbd>cmd</kbd> <kbd>s</kbd></p>
   </span>
 </div>
 {{!-- &#x1F50E --}}
@@ -17,12 +17,20 @@
 <script>
     var isMac = navigator.platform.toUpperCase().indexOf('MAC') >= 0;
     var searchInputWrapper = document.querySelector('.search-input-wrapper__icon');
+    var searchBar = document.getElementById('searchBar');
     var keyboardShortcutElement = document.getElementById('keyboardShortcut');
     var keyboardShortcutMacElement = document.getElementById('keyboardShortcutMac');
 
     if (isMac) {
       keyboardShortcutElement.style.display = 'none';
       keyboardShortcutMacElement.style.display = 'block';
+
+      searchBar.addEventListener('keydown', function(event) {
+        if (event.metaKey && event.key == 's') {
+          event.preventDefault();
+          searchBar.focus();
+        }
+      });
     } else {
       keyboardShortcutElement.style.display = 'block';
       keyboardShortcutMacElement.style.display = 'none';
