--- a/src/partials/search.hbs
+++ b/src/partials/search.hbs
@@ -26,7 +26,7 @@
       keyboardShortcutMacElement.style.display = 'block';
 
       searchBar.addEventListener('keydown', function(event) {
-        if (event.metaKey && event.key == 's') {
+        if (event.metaKey && event.key == 'k') {
           event.preventDefault();
           searchBar.focus();
         }
