--- a/src/partials/footer-scripts-paas.hbs
+++ b/src/partials/footer-scripts-paas.hbs
@@ -3,6 +3,7 @@
 <script async src="{{{uiRootPath}}}/js/vendor/clipboard.js"></script>
 <script async src="{{{uiRootPath}}}/js/vendor/medium-zoom.js"></script>
 <script async src="{{{uiRootPath}}}/js/vendor/collapse.js"></script>
+<script async src="{{{uiRootPath}}}/js/vendor/mgnlDocsLabs-remove-snapshot-nav-links.js"></script>
 
 {{> initBeforeAfter}}
 
