--- a/src/css/site.css
+++ b/src/css/site.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
 @import "typeface-roboto.css";
 @import "typeface-roboto-mono.css";
+@import "typeface-national-compressed.css";
 @import "vars.css";
 @import "base.css";
 @import "body.css";
