import css to site.css for rendering

--- a/src/css/site.css
+++ b/src/css/site.css
@@ -17,6 +17,7 @@
 @import "doc.css";
 @import "home.css";
 @import "land.css";
+@import "landing-page.css";
 @import "pagination.css";
 @import "header.css";
 @import "search.css";
