renaming to remedy search and layout

--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -211,24 +211,10 @@
     </button>
   </div>
   <div id="topbar-nav" class="navbar-menu">
-    {{> search-disabled}}
+    {{> search}}
     <div class="navbar-end">
-      <a href="{{{siteRootPath}}}/product-docs/Releases.html" class="navbar-item">Releases</a>
-      <div class="navbar-item has-dropdown is-hoverable">
-        <span class="navbar-link">DX Core
-          <span class="icon-wrapper"><i class="arrow down"></i></span>
-        </span>
-        <div class="navbar-dropdown">
-          <a href="{{{siteRootPath}}}/product-docs/Getting-started-with-Magnolia.html" class="navbar-item">Get Started</a>
-          <a href="{{{siteRootPath}}}/product-docs/Developing.html" class="navbar-item">Developing</a>
-          <a href="{{{siteRootPath}}}/product-docs/Modules.html" class="navbar-item">Modules</a>
-          <a href="{{{siteRootPath}}}/product-docs/Developing/API.html" class="navbar-item">API</a>
-          <a href="{{{siteRootPath}}}/product-docs/Developing/Templating.html" class="navbar-item">Templating</a>
-          <a href="{{{siteRootPath}}}/product-docs/Apps.html" class="navbar-item">Apps</a>
-          <a href="{{{siteRootPath}}}/product-docs/Connector-Packs.html" class="navbar-item">Connector Packs</a>
-          <a href="{{{siteRootPath}}}/magnolia-cli/4.x/index.html" class="navbar-item">CLI</a>
-          <a href="{{{siteRootPath}}}/product-docs/Special-Features.html" class="navbar-item">Special Features</a>
-        </div>
+      <a href="{{{siteRootPath}}}/product-docs/Releases.html" class="navbar-item">Changelog</a>
+      <a href="{{{siteRootPath}}}/welcome/index.html" class="navbar-item">DX Core</a>
       </div>
       <a href="{{{siteRootPath}}}/paas/index.html" class="navbar-item">PaaS</a>
       <div class="navbar-item navbar-item--button">
