--- a/src/partials/footer-scripts.hbs
+++ b/src/partials/footer-scripts.hbs
@@ -70,37 +70,6 @@
 </script>
 {{/if}}
 
-{{#if (eq page.layout 'home-saas')}}
-<script type="text/javascript">
-    docsearch({
-        appId: 'IIQKXJ786V',
-        apiKey: '450fd6db7d4e2f26607012f0d8683a29',
-        indexName: 'dev_DOCS',
-        inputSelector: '#searchBar',
-        algoliaOptions: { hitsPerPage: 12 },
-        debug: true // prevent it from closing on inspection.
-    });
-
-    function toggleDropDown () {
-      var linkEl = document.querySelectorAll('.has-dropdown');
-      var allDrops =  document.querySelectorAll('.has-dropdown .navbar-dropdown');
-      for (var el of linkEl) {
-        el.addEventListener('click', function (e) {
-          for (var drop of allDrops) {
-            drop.style.display = "none";
-          }
-          e.stopPropagation()
-          e.target.nextElementSibling.style.display = "block";
-        })
-      }
-    }
-    if(window.innerWidth < 1200) {
-      toggleDropDown();
-    }
-
-</script>
-{{/if}}
-
 {{#if (eq page.layout 'paas')}}
 <script type="text/javascript">
     docsearch({
@@ -133,6 +102,37 @@
 {{/if}}
 
 {{#if (eq page.layout 'home')}}
+<script type="text/javascript">
+    docsearch({
+        appId: 'IIQKXJ786V',
+        apiKey: '450fd6db7d4e2f26607012f0d8683a29',
+        indexName: 'landing_page',
+        inputSelector: '#searchBar',
+        algoliaOptions: { hitsPerPage: 12 },
+        // debug: true // prevent it from closing on inspection.
+    });
+
+    function toggleDropDown () {
+      var linkEl = document.querySelectorAll('.has-dropdown');
+      var allDrops =  document.querySelectorAll('.has-dropdown .navbar-dropdown');
+      for (var el of linkEl) {
+        el.addEventListener('click', function (e) {
+          for (var drop of allDrops) {
+            drop.style.display = "none";
+          }
+          e.stopPropagation()
+          e.target.nextElementSibling.style.display = "block";
+        })
+      }
+    }
+    if(window.innerWidth < 1200) {
+      toggleDropDown();
+    }
+
+</script>
+{{/if}}
+
+{{#if (eq page.layout 'home-saas')}}
 <script type="text/javascript">
     docsearch({
         appId: 'IIQKXJ786V',
