--- a/src/partials/section--video.hbs
+++ b/src/partials/section--video.hbs
@@ -6,7 +6,7 @@
     <div class="row no-margin d-flex align-center">
       <div class="column c-50 no-padding">
         <div class="section--video__card-content">
-          <h3>See a fleshed out demonstration of how SaaS powers corporate website, product showcasing and multi-brand use cases.</h3>
+          <h3>See a fleshed out demonstration of how SaaS powers corporate websites, product showcasing, and multi-brand use cases.</h3>
           <a href="#" class="link --black">See the website</a>
         </div>
       </div>
