fix navbar burger, shrink when scroll, header content

--- a/src/css/landing-page.css
+++ b/src/css/landing-page.css
@@ -592,6 +592,13 @@ h3 {
   }
 }
 
+.info-label {
+  padding: 5px;
+  background-color: whitesmoke;
+  color: var(--color-jet-70);
+  font-size: smaller;
+}
+
 /* @media only screen and (min-width: 1000px) {
 
 } */
