--- a/src/partials/body-home-saas.hbs
+++ b/src/partials/body-home-saas.hbs
@@ -10,8 +10,6 @@
 
     {{> section--features}}
 
-    {{> section--video}}
-
-    {{> section--pre-footer}}
+    {{!-- {{> section--pre-footer}} --}}
   </main>
 </div>
