--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -213,13 +213,11 @@
   <div id="topbar-nav" class="navbar-menu">
     {{> search}}
     <div class="navbar-end">
-      <a href="{{{siteRootPath}}}/product-docs/Releases.html" class="navbar-item">Changelog</a>
-      <a href="{{{siteRootPath}}}/welcome/index.html" class="navbar-item">DX Core</a>
-      </div>
-      <a href="{{{siteRootPath}}}/paas/index.html" class="navbar-item">PaaS</a>
+      <a href="{{{siteRootPath}}}/product-docs/Releases.html" class="navbar-item"><i class="fa fa-list-alt" aria-hidden="true" style="margin-right: 5px;"></i>
+ Changelog</a>
       <div class="navbar-item navbar-item--button">
         <span class="control">
-          <a class="button is-primary" href="https://www.magnolia-cms.com/getstarted" target="_blank">Get Magnolia</a>
+          <a class="button is-primary" href="https://www.magnolia-cms.com/getstarted" target="_blank">Get SaaS</a>
         </span>
       </div>
     </div>
