--- a/src/partials/section--pre-footer.hbs
+++ b/src/partials/section--pre-footer.hbs
@@ -2,25 +2,25 @@
   <div class="container">
     <div class="row">
       <div class="column c-33 m-b-24">
-        <div class="card-block --outlined --center">
+        {{!-- <div class="card-block --outlined --center">
           <h3 class="card-block__title text-center">Changelog</h3>
           <p class="paragraph text-center">Stay on top of what’s new.</p>
           <a href="#" class="link --yellow">See what’s new</a>
-        </div>
+        </div> --}}
       </div>
       <div class="column c-33 m-b-24">
         <div class="card-block --outlined --center">
           <h3 class="card-block__title text-center">Changelog</h3>
-          <p class="paragraph text-center">Stay on top of what’s new.</p>
-          <a href="#" class="link --yellow">See what’s new</a>
+          <p class="paragraph text-center">Stay on top of what's new.</p>
+          <a href="#" class="link --yellow">See what's new</a>
         </div>
       </div>
       <div class="column c-33 m-b-24">
-        <div class="card-block --outlined --center">
+        {{!-- <div class="card-block --outlined --center">
           <h3 class="card-block__title text-center">Changelog</h3>
           <p class="paragraph text-center">Stay on top of what’s new.</p>
           <a href="#" class="link --yellow">See what’s new</a>
-        </div>
+        </div> --}}
       </div>
     </div>
   </div>
