fixed paragraph issue affecting other layouts

--- a/src/partials/section--get-started.hbs
+++ b/src/partials/section--get-started.hbs
@@ -28,7 +28,7 @@
 
                 <h3>What is Magnolia SaaS</h3>
 
-                <p class="paragraph">
+                <p class="splash">
                   Magnolia SaaS is a Git-centric, cloud-based platform that brings hyper speed and agility for your development and production lifecycle.
                 </p>
 
@@ -66,7 +66,7 @@
 
                 <h3>Getting Started tutorial</h3>
 
-                <p class="paragraph">
+                <p class="splash">
                   Start right away with our demo project and step-by-step tutorial.
                 </p>
 
@@ -89,7 +89,7 @@
 
                 <h3>APIs</h3>
 
-                <p class="paragraph">
+                <p class="splash">
                   Get familiar with our APIs for content delivery and templating.
                 </p>
 
@@ -115,7 +115,7 @@
 
                 <h3>Concepts and fundamentals</h3>
 
-                <p class="paragraph">
+                <p class="splash">
                   Learn the foundations of developing with Magnolia SaaS and get familiar with our Light Development technology.
                 </p>
 
