--- a/src/css/landing-page.css
+++ b/src/css/landing-page.css
@@ -14,8 +14,12 @@ body * {
   font-family: "NationalCompressed", sans-serif;
 }
 
-.body :where(h1, h2, h3, .paragraph) {
+.body :where(h1, h2, h3, .splash) {
   margin-bottom: 16px;
+}
+
+.section-hero__paragraph p {
+  margin-top: 3vh;
 }
 
 blockquote {
@@ -64,20 +68,20 @@ h3 {
   }
 }
 
-.paragraph {
+.splash {
   font-family: Roboto, sans-serif;
   font-size: 16px;
   line-height: 1.28;
 }
 
 @media only screen and (max-width: 999px) and (min-width: 768px) {
-  .paragraph {
+  .splash {
     font-size: 18px;
   }
 }
 
 @media only screen and (min-width: 1000px) {
-  .paragraph {
+  .splash {
     font-size: 20px;
   }
 }
@@ -434,11 +438,11 @@ h3 {
   border: 1px solid var(--color-gray-medium);
 }
 
-.card-block :where(.paragraph, .link) {
+.card-block :where(.splash, .link) {
   font-family: Roboto, sans-serif;
 }
 
-.card-block .paragraph {
+.card-block .splash {
   font-size: 16px;
 }
 
@@ -453,7 +457,7 @@ h3 {
     margin-bottom: 40px;
   }
 
-  .card-block .paragraph {
+  .card-block .splash {
     font-size: 18px;
   }
 }
@@ -463,7 +467,7 @@ h3 {
     margin-bottom: 80px;
   }
 
-  .card-block .paragraph {
+  .card-block .splash {
     font-size: 20px;
   }
 }
