partner example link

--- a/src/partials/section--yellow.hbs
+++ b/src/partials/section--yellow.hbs
@@ -15,7 +15,7 @@
             "Magnolia SaaS reduced our time to go-live by 80%. It eliminated the need for time consuming and finicky server-side development and deployments."
           </blockquote>
           <p class="quote--author">Arjuna Shankar, Partner, dotfusion</p>
-          <a href="#" class="link --black">See the website</a>
+          <a href="https://dotfusion.com/" class="link --black" target="_blank">Check it out</a>
         </div>
       </div>
     </div>
