--- a/src/css/landing-page.css
+++ b/src/css/landing-page.css
@@ -344,6 +344,7 @@ h3 {
 
 .floating-block .card-block {
   text-align: center;
+  transition: 0.3s ease;
 }
 
 .floating-block {
@@ -432,6 +433,11 @@ h3 {
   display: flex;
   flex-direction: column;
   align-content: space-around;
+  transition: 0.5s ease;
+}
+
+.card-block.--bg-yellow:hover {
+  box-shadow: -2px 3px 16px 3px var(--color-gray-30);
 }
 
 .card-block.--outlined {
